<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default_screens"
    tools:context=".view.InsertClients">

    <LinearLayout
        android:id="@+id/linearLayoutInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/editTextNameClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/hint_client_name"
            android:layout_marginBottom="@dimen/margin_default_bottom"
            android:backgroundTint="@color/screens_primary_color"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextCNPJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/hint_client_cnpj"
            android:backgroundTint="@color/screens_primary_color"
            android:layout_marginBottom="@dimen/margin_default_bottom"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextCorporateName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/hint_client_social"
            android:backgroundTint="@color/screens_primary_color"
            android:layout_marginBottom="@dimen/margin_default_bottom"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/spinnerSelectedCountry"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/button_editable_primary_bg"
            />

    </LinearLayout>

    <Button
        android:id="@+id/buttonRegisterClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_client"
        android:textColor="@color/white"
        android:background="@drawable/button_editable_second_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>