<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default_screens"
    tools:context=".view.HomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/addCountrys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add_country"
            android:layout_marginBottom="@dimen/margin_default_bottom"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_editable_primary_bg"
            app:layout_constraintBottom_toTopOf="@+id/addClients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addClients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add_client"
            android:layout_marginBottom="@dimen/margin_default_bottom"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_editable_primary_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/searchClients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_search_client"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_editable_primary_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addClients" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>